tests/ui/parser/recovered-struct-variant.stderr
error: expected `:`, found `,`
  --> $DIR/recovered-struct-variant.rs:2:10
   |
LL |     A { a, b: usize }
   |     -    ^ expected `:`
   |     |
   |     while parsing this struct

error[E0026]: variant `Foo::A` does not have fields named `a`, `b`
  --> $DIR/recovered-struct-variant.rs:11:17
   |
LL |         Foo::A {a, b} => {}
   |                 ^  ^ variant `Foo::A` does not have these fields

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0026`.
